# TEAM8-Text-Console-RPG

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CmakeLists.txt  GameManager  GameManager.h  Kimseonwoo.cpp  README.md  TEAM8-Text-Console-RPG.sln  TEAM8-Text-Console-RPG.vcxproj  TEAM8-Text-Console-RPG.vcxproj.filters  TEAM8_RPG_Architecture.html  TEAM8_TEXT_RPG_UML.html  main.cpp
Character/: Character.cpp  Character.h
Game/: BattleManager.cpp  BattleManager.h  GameManager.cpp  GameManager.h  StartEndManager.cpp  StartEndManager.h
Item/: AttackBoost.cpp  AttackBoost.h  HealthPotion.cpp  HealthPotion.h  IItem.h  Inventory.cpp  Inventory.h  README.md
Monster/: Goblin.cpp  Goblin.h  Monster.h  README.md
Monster/Types/: Goblin.cpp  Goblin.h  Orc.h  Slime.cpp  Slime.h  Troll.cpp  Troll.h
Monster/classes/: Boss.cpp  Boss.h  Goblin.cpp  Goblin.h  Orc.cpp  Orc.h  Slime.cpp  Slime.h  Troll.cpp  Troll.h
Monster/data/: MonsterStructs.h  MonsterTable.h
Monster/item/: DropItem.cpp  DropItem.h
Monster/utils/: Create.cpp  Create.h  common.cpp  common.h
Shop/: function.cpp  function.h  struct.h
Sound/: SoundManager.h
UI/: README.md  UIManager.cpp  UIManager.h
